--- a/mod2-solution/mod2.css
+++ b/mod2-solution/mod2.css
@@ -3,6 +3,9 @@
 * {
 	box-sizing: border-box;
 }
+h1{
+	text-align: center;
+}
 html{
 	font-size :100%;
 	font-family :'Lato';
@@ -15,10 +18,11 @@ html{
 	grid-template-columns: auto auto auto;
 	grid-gap: 30px;
 	height:210px;
+
 	
 	
 }
-.container>div{
+.container> div{
 	border: 3px solid black;
 	padding-right: 10px;
 	padding-left: 10px;
@@ -50,7 +54,7 @@ html{
 }
 }
 @media (max-width: 767px){
-	.container{
+.container{
 	
 	padding:20px;
 	display:grid;
@@ -64,23 +68,12 @@ html{
 	border: 3px solid black;
 	padding-right: 10px;
 	padding-left: 10px;
-	padding-bottom:2px;
+	padding-bottom:10px;
 	background: gray;
 }
 }
-
-.col4{
-
+h2{
 	text-align: right;
 	
-
-}
 	
-.col5{
-
-	text-align: right;
-}
-.col6{
-
-	text-align: right;
 }
